name:                RESP
version:             0.1.0.0
synopsis:            A RESP Parser. Redis Serialization Protocol.
homepage:            https://github.com/adarqui/RESP
license:             Falko
license-file:        LICENSE
author:              Falko Peters (Original Author, Protocol.hs in hedis), Andrew Darqui (Modifications, Benchmarks, Tests, Standalone Repo)
maintainer:          andrew.darqui@gmail.com
category:            Protocol
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
   Protocol.RESP
   Protocol.RESP.Include
   Protocol.RESP.Internal
  build-depends:       base >= 4.6, bytestring, attoparsec, criterion
  GHC-Options:         -Wall -rtsopts
  hs-source-dirs:      src

executable "simple"
  main-is:             simple.hs
  build-depends:       base >= 4.6, bytestring, RESP
  GHC-Options:         -O2 -Wall -rtsopts -auto-all
  hs-source-dirs:      examples

benchmark resp-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src, bench
  main-is:          Suite.hs
  build-depends:    base >= 4.6, bytestring, attoparsec, criterion, RESP
  ghc-options:      -O2 -Wall -rtsopts
